--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Diary</string>
     <string name="login">Login</string>
+    <string name="date"></string>
+    <string name="saveButton">Save</string>
 </resources>
