--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="login">Login</string>
     <string name="date"></string>
     <string name="saveButton">Save</string>
+    <string name="qrButton">QR</string>
+    <string name="cancelqrButton">Cancel</string>
 </resources>
